<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".Bilan">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="331dp"
        android:layout_height="358dp"
        android:paddingTop="20dp"
        app:srcCompat="@drawable/dune" />

    <TextView
        android:id="@+id/tv_nomFilm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:text="TextView"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_heureSeance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp"
        android:text="@string/séance_de"
        android:textAlignment="center"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tv_coutTotal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp"
        android:text="@string/cout_total"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp"
        android:text="@string/res_ok"
        android:textAlignment="center"
        android:textSize="20sp" />

    <RatingBar
        android:id="@+id/rb_note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:numStars="5"
        android:rating="3.5"
        android:stepSize="0.1" />

    <EditText
        android:id="@+id/et_commentaires"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/b_enregistrer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Enregistrer"/>
</LinearLayout>