<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".Reservation">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="274dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="445dp"
            android:layout_height="254dp"
            android:layout_weight="1"
            android:paddingLeft="30dp"
            android:paddingTop="10dp"
            android:paddingRight="30dp"
            android:paddingBottom="10dp"
            app:srcCompat="@drawable/dune" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_titreFilm"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingTop="60dp"
                android:paddingBottom="40dp"
                android:text="Nom du film"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/séance_de"
                android:textAlignment="center"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/s_horaires"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                tools:ignore="TouchTargetSizeCheck" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="#000000" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="30dp"
                android:paddingBottom="30dp"
                android:text="@string/nb_places"
                android:textAlignment="center"
                android:textSize="24sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_nbNormal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="40dp"
                        android:paddingTop="25dp"
                        android:paddingRight="40dp"
                        android:paddingBottom="10dp"
                        android:text="0"
                        android:textAlignment="center"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/tv_nbEtudiant"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="40dp"
                        android:paddingTop="25dp"
                        android:paddingRight="40dp"
                        android:paddingBottom="10dp"
                        android:text="0"
                        android:textAlignment="center"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/tv_nbJeune"
                        android:layout_width="wrap_content"
                        android:layout_height="68dp"
                        android:paddingLeft="40dp"
                        android:paddingTop="25dp"
                        android:paddingRight="40dp"
                        android:text="0"
                        android:textAlignment="center"
                        android:textSize="24sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp">

                    <Button
                        android:id="@+id/b_plusNormal"
                        android:layout_width="50dp"
                        android:layout_height="68dp"
                        android:text="@string/plus" />

                    <Button
                        android:id="@+id/b_plusEtudiant"
                        android:layout_width="match_parent"
                        android:layout_height="68dp"
                        android:text="@string/plus" />

                    <Button
                        android:id="@+id/b_plusJeune"
                        android:layout_width="match_parent"
                        android:layout_height="68dp"
                        android:text="@string/plus" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/b_moinsNormal"
                        android:layout_width="50dp"
                        android:layout_height="68dp"
                        android:text="@string/moins" />

                    <Button
                        android:id="@+id/b_moinsEtudiant"
                        android:layout_width="match_parent"
                        android:layout_height="68dp"
                        android:text="@string/moins" />

                    <Button
                        android:id="@+id/b_moinsJeune"
                        android:layout_width="match_parent"
                        android:layout_height="68dp"
                        android:text="@string/moins" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="30dp"
                android:paddingBottom="30dp"
                android:text="@string/tarif"
                android:textAlignment="center"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:paddingTop="15dp"
                android:text="@string/normal"
                android:textAlignment="center"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:paddingTop="15dp"
                android:text="@string/etudiant"
                android:textAlignment="center"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="15dp"
                android:text="@string/jeune"
                android:textAlignment="center"
                android:textSize="24sp" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/b_reserver"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:layout_weight="1"
        android:padding="30dp"
        android:text="@string/reserver" />

</LinearLayout>